2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Added FractionElapsed property to simplify
	  creation of progress bars in developed applications

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Bugfix: Changed handling of EOF to prevent
	  cutting off when buffer size and/or count is very large

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Added RemoveTag & RemoveAllTags functions

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Fixed BufferSize & BufferCount property
	  declarations to return the correct values
	Changed default number of buffers to 32, up from 16 (Default
	  buffer size still 4096)

2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Added support for changing buffer size &
	  number at runtime
	Fixed 'Null Reference' bug caused by trying to raise events
	  when the user wasn't catching them

2010-04-23  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Complete re-write of Tag handling. Added new tag
	  functions

	* OggPlayer.cs:
	* MiscStuff.cs: Changes to reflect alterations in tag handling

2010-04-23  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* LGPL:
	* DragonOgg.csproj:
	* OpenTK-License.txt: 

2010-04-19  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlaylistWriter.cs: Implemented OggPlaylistWriter
	  interface and added stub classes/methods for PLS & M3U
	  playlist writers

	* OggPlaylist.cs: Tidied up comments & constructor method

2010-04-16  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs:
	* MiscStuff.cs:
	* OggPlayer.cs:
	* OggPlaylist.cs: Fixed license text (Incorrectly saying
	  GPLv3, should say LGPL)

	* DragonOgg.csproj: 

2010-04-16  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* csogg:
	* csvorbis:
	* OggFile.cs:
	* TagLibSharp:
	* OggPlayer.cs:
	* MiscStuff.cs:
	* OggPlaylist.cs:
	* AssemblyInfo.cs:
	* DragonOgg.csproj: 
